Renaming disabled property of Multi select because this conflicted with IE.

--- a/src/app/component/angularjs-dropdown-multiselect.html
+++ b/src/app/component/angularjs-dropdown-multiselect.html
@@ -1,7 +1,7 @@
 <div class="multiselect-parent btn-group dropdown-multiselect"
      ng-class="{open: open}">
      <div ng-transclude="toggleDropdown" ng-click="toggleDropdown()">
-      <button ng-disabled="disabled"
+      <button ng-disabled="disableDropdown"
               type="button"
               class="dropdown-toggle"
               ng-class="settings.buttonClasses"
